(lang dune 2.0)

(name mcomp-lang)

(license ISC)

(authors
  "LCI-2021")

(maintainers
  "LCI-2021")

(generate_opam_files true)
(using menhir 2.0)

(package
 (name mcomp-lang)
 (synopsis "µcomp-lang is a simple component-based imperative language.")
 (description "µcomp-lang is a simple component-based imperative language. It is the final project of the course  Languages, Compilers and Interpreters (Cod. 653AA) @ UNIPI")
 (depends
  (ocaml (>= 4.08.0))
  dune
  (odoc :with-doc)
  ppx_deriving
  menhir
  (llvm (>= 11.0.0))))

